src/style/Card.scss
.card {
  h3, h4, h5, p, ol {
    margin: 0;
  }

  h4 {
    font-weight: normal;
  }

  h5 {
    font-weight: bold;
    font-size: 1em;
  }

  border: 2px solid #ccc;
  border-radius: 5px;
  padding: 10px;
  max-width: 600px;
  margin: 10px auto;
  background-color: #111;

  img {
    width: auto;
    height: 200px;
  }

  .card-art {
    cursor: pointer;
  }

  .effect-block {
    font-size: 0.8em;
  }

  .overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;

    img {
      max-width: 90%;
      max-height: 90%;
    }
  }

  .statline {
    display: flex;
    justify-content: right;
    margin-top: 10px;
  }
}

.card-and-notes {
  display: flex;
  justify-content: flex-start;
  flex-direction: row;
  align-items: flex-start;
  flex-wrap: wrap;

  border: 2px solid #ccc;
  border-radius: 5px;
  padding: 10px;

  gap: 10px;

  .card {
    //max-width: 45%;
    width: 45%;
    flex: 1 1 auto;
    margin: 0;
  }

  .notes {
    flex: 1 1 50%;
    //max-width: 50%;
    font-size: 0.8em;
    box-sizing: border-box;

    p {
      margin-top: 0;
    }
  }
}

img.attribute-icon {
  height: 1em;
  vertical-align: text-bottom;
}

.inline-logo {
    display: inline-block;
    height: 1em;
    vertical-align: middle;
}

